[gd_scene load_steps=3 format=3 uid="uid://ddyp1fne0uwms"]

[ext_resource type="Script" uid="uid://do4haf4ad0q2j" path="res://Assets/Scripts/pause_menu.gd" id="1_6udtp"]
[ext_resource type="FontFile" uid="uid://ds2lf2wy6wtd5" path="res://Assets/Fonts/Kenney Mini.ttf" id="2_dadan"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_6udtp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.607843)

[node name="Resume" type="Button" parent="."]
offset_left = 451.0
offset_top = 174.0
offset_right = 701.0
offset_bottom = 274.0
theme_override_fonts/font = ExtResource("2_dadan")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Reset Level" type="Button" parent="."]
offset_left = 451.0
offset_top = 274.0
offset_right = 701.0
offset_bottom = 374.0
theme_override_fonts/font = ExtResource("2_dadan")
theme_override_font_sizes/font_size = 32
text = "Reset Level"

[node name="Quit" type="Button" parent="."]
offset_left = 451.0
offset_top = 374.0
offset_right = 701.0
offset_bottom = 474.0
theme_override_fonts/font = ExtResource("2_dadan")
theme_override_font_sizes/font_size = 32
text = "Quit Game"

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Reset Level" to="." method="_on_reset_level_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
